# package information
[metadata]
name = cocotbext-apb
version = attr: cocotbext.apb.version.__version__
description = APB modules for cocotb
keywords = apb, cocotb
author = Alex Forencich
author_email = alex@alexforencich.com
license = MIT
url = https://github.com/alexforencich/cocotbext-apb
project_urls =
    Bug Tracker = https://github.com/alexforencich/cocotbext-apb/issues
    Source Code = https://github.com/alexforencich/cocotbext-apb
download_url = https://github.com/alexforencich/cocotbext-apb/tarball/master
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Framework :: cocotb
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find_namespace:
python_requires = >=3.5
install_requires =
    cocotb >= 1.6.0
    cocotb-bus
    cocotb-coverage

[options.packages.find]
include = cocotbext.*
